[package]
name = "cizelge"
version = "0.1.0"
edition = "2024"
description = "Apache ECharts'ın gpui (Zed) üzerinde çalışan yerli Rust uyarlaması"
license = "Apache-2.0"

# Panik yasağı (bkz. FAZ_PLANI.md — değiştirilemez kural): çalışma zamanı
# kodunda panik üretebilen yapılar clippy ile derleme düzeyinde yasaktır.
# Test modülleri ve test hedefleri, test-zamanı olduğundan yerel `allow`
# taşır. Tamsayı aritmetiği denetimi aşamalı sıkılaştırmadadır (Faz 1 notu).
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

[dependencies]
gpui = { path = "../zed/crates/gpui" }
lyon = "1.0"

[dev-dependencies]
gpui_platform = { path = "../zed/crates/gpui_platform", features = ["font-kit", "wayland", "x11"] }

[[example]]
name = "cizgi"

[[example]]
name = "sutun"

[[example]]
name = "pasta"

[[example]]
name = "sacilim"

[[example]]
name = "pano"

[[example]]
name = "olaylar"

[[example]]
name = "mum"

[[example]]
name = "kutu"

[[example]]
name = "isi"

[[example]]
name = "huni"

[[example]]
name = "gosterge_saati"

[[example]]
name = "radar"

[[example]]
name = "efektli_sacilim"

[[example]]
name = "imleyiciler"

[[example]]
name = "coklu_izgara"

[[example]]
name = "yakinlastirma"

[[test]]
name = "altin"
path = "testler/altin.rs"
