[package]
name = "cizelge"
version = "0.1.0"
edition = "2024"
description = "Apache ECharts'ın gpui (Zed) üzerinde çalışan yerli Rust uyarlaması"
license = "Apache-2.0"

# Panik yasağı (bkz. FAZ_PLANI.md — değiştirilemez kural): çalışma zamanı
# kodunda panik üretebilen yapılar clippy ile derleme düzeyinde yasaktır.
# Test modülleri ve test hedefleri, test-zamanı olduğundan yerel `allow`
# taşır. Tamsayı aritmetiği denetimi aşamalı sıkılaştırmadadır (Faz 1 notu).
[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
indexing_slicing = "deny"

[dependencies]
gpui = { path = "../zed/crates/gpui", optional = true }
# PNG dışa aktarım (kullanıcı onayı 2026-07-17): rasterleştirme tiny-skia,
# yazı biçimlendirme ab_glyph + sistem yazı tipi keşfi fontdb.
tiny-skia = { version = "0.11", optional = true }
ab_glyph = { version = "0.2", optional = true }
fontdb = { version = "0.18", optional = true }
lyon = "1.0"

[features]
# Öntanımlı: gpui penceresi (Çizici + GrafikGörünümü). Kapatılırsa
# çekirdek (model + ölçek + KayıtYüzeyi + SvgYüzeyi) gpui'siz derlenir —
# WASM hedefi bu kipi kullanır.
default = ["gpui", "png"]
gpui = ["dep:gpui"]
# PNG dışa aktarımı (PikselYüzeyi + png_dışa_aktar); wasm çekirdeği bunu
# dışarıda bırakır (dosya sistemi ister).
png = ["dep:tiny-skia", "dep:ab_glyph", "dep:fontdb"]

[dev-dependencies]
gpui_platform = { path = "../zed/crates/gpui_platform", features = ["font-kit", "wayland", "x11"] }

[[example]]
required-features = ["gpui"]
name = "cizgi"

[[example]]
required-features = ["gpui"]
name = "sutun"

[[example]]
required-features = ["gpui"]
name = "pasta"

[[example]]
required-features = ["gpui"]
name = "sacilim"

[[example]]
required-features = ["gpui"]
name = "pano"

[[example]]
required-features = ["gpui"]
name = "olaylar"

[[example]]
required-features = ["gpui"]
name = "mum"

[[example]]
required-features = ["gpui"]
name = "kutu"

[[example]]
required-features = ["gpui"]
name = "isi"

[[example]]
required-features = ["gpui"]
name = "huni"

[[example]]
required-features = ["gpui"]
name = "gosterge_saati"

[[example]]
required-features = ["gpui"]
name = "radar"

[[example]]
required-features = ["gpui"]
name = "efektli_sacilim"

[[example]]
required-features = ["gpui"]
name = "imleyiciler"

[[example]]
required-features = ["gpui"]
name = "coklu_izgara"

[[example]]
required-features = ["gpui"]
name = "yakinlastirma"

[[example]]
required-features = ["gpui"]
name = "kutupsal"

[[example]]
required-features = ["gpui"]
name = "agac_haritasi"

[[example]]
required-features = ["gpui"]
name = "gunes"

[[example]]
required-features = ["gpui"]
name = "agac"

[[example]]
required-features = ["gpui"]
name = "sankey"

[[example]]
required-features = ["gpui"]
name = "grafo"

[[example]]
required-features = ["gpui"]
name = "tema_nehri"

[[example]]
required-features = ["gpui"]
name = "zaman_seridi"

[[example]]
required-features = ["gpui"]
name = "galeri"

[[example]]
required-features = ["gpui"]
name = "kiris"

[[example]]
required-features = ["gpui"]
name = "paralel"

[[example]]
required-features = ["gpui"]
name = "takvim"

[[test]]
name = "altin"
path = "testler/altin.rs"
